fix input outlines

--- a/css/style.css
+++ b/css/style.css
@@ -49,9 +49,6 @@ h4 {
     font-size: 20px;
     text-align: center;
 }
-.social a {
-    margin-right: 10px;
-}
 .flex {
     display: flex;
 }
@@ -71,7 +68,7 @@ h4 {
     padding-top: 15px;
 }
 .single-input input:focus,.single-input textarea:focus {
-    border: 1px solid #80b7c5;
+    outline: 1px solid #fff;
 }
 .single-input input{
     background: #80b7c5;
@@ -148,5 +145,12 @@ h4 {
 }
 .skin_feedback_bottom label::before {
     border: 2px solid #80b7c5;
+}
+/* social */
+.social {
+    margin: 50px 0;
+}
+.social a {
+    margin-right: 10px;
 }
 /***** footer *****/
