--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,28 @@ body {
     padding: 0;
     margin: 0;
     overflow-x: hidden;
+    background-color: white;
+}
+.clr-white {
+    color: white;
+}
+.clr-black {
+    color: black;
+}
+.clr-main {
+    color: #5cc5c4;
+}
+.clr-white:hover, .clr-white:active, .clr-white:visited {
+    color: white;
+    text-decoration: none;
+}
+.clr-black:hover, .clr-black:active, .clr-black:visited {
+    color: black;
+    text-decoration: none;
+}
+.clr-main:hover, .clr-main:active, .clr-main:visited {
+    color: #5cc5c4;
+    text-decoration: none;
 }
 
 /****************\
@@ -19,10 +41,10 @@ body {
 header {
     width: 100%;
     height: 200px;
-    display: flex;
+    display: none;
     justify-content: center;
     align-items: center;
-    background-image: url(../images/background.svg);
+    background-image: url(../images/bck_2.png);
     border-bottom: 7px solid #d5cfc0;
     background-size: cover;
 }
@@ -37,6 +59,70 @@ header {
     background: #eee; /* FireFox */
 }
 main {
+    width: 100%;
+    height: auto;
+    background-image: url(../images/bck_2.png);
+    background-position: 50% 50%;
+    background-repeat: repeat;
+    background-size: cover;
+}
+article {
+    display: flex;
+    width: 100%;
+    height: 100vh;
+    flex-direction: row;
+}
+    /*article 0*/
+    .art__0 {
+        background-color: #5cc5c4;
+        background-image: url(../images/bck_1.png);
+        background-position: 50% 50%;
+        background-repeat: repeat;
+        background-size: cover;
+    }
+    .art__wrapper {
+        width: 50vw;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    .art__wrapper > * {
+        text-align: center;
+    }
+    .art-0__logo-1 {
+        width: 6vw;
+        margin-bottom: .3vw;
+    }
+    .art-0__logo-2 {
+        width: 16vw;
+        margin: 35px 0 60px;
+    }
+    .art-0__logo-3 {
+        width: 20vw;
+    }
+    .art-0__text-1 {
+        font-size: 2vw;
+        line-height: 1.2em;
+    }
+    .art-0__text-2 {
+        font-size: 1vw;
+    }
+    .art-0__text-3 {
+        font-size: 1.77vw;
+        margin: 30px 0;
+    }
+    .art-0__link {
+        font-size: 1vw;
+    }
+    .art-0__phone{
+        font-size: 1.2vw;
+    }
+
+
+/***** footer *****/
+footer {
     height: auto;
     min-height: calc(100vh - 334px);
     width: 100%;
@@ -46,7 +132,7 @@ main {
     align-items: center;
     background-color: #44c6bf;
 }
-h2 {
+footer h2 {
     color: #1f7c78;
     text-align: center;
     font-size: 25px;
@@ -54,14 +140,14 @@ h2 {
     margin-top: 150px;
     margin-bottom: 100px;
 }
-h3 {
+footer h3 {
     color: #e2e2e2;
     text-align: center;
     font-size: 20px;
     letter-spacing: 2px;
     margin-bottom: 25px;
 }
-h4 {
+footer h4 {
     color: #e2e2e2;
     font-size: 18px;
     text-align: center;
@@ -117,7 +203,7 @@ h4 {
 .button{
     margin-top: 20px;
 }
-.button a{
+footer .button a{
     border: 1px solid #ffffff;
     color: #fff;
     display: inline-block;
@@ -177,4 +263,57 @@ h4 {
 .social a {
     margin-right: 10px;
 }
-/***** footer *****/
+/**************************************
+            	MADIA
+***************************************/
+/*mobile < 576px*/
+@media (max-width: 575.98px) {
+    article {
+        height: auto;
+    }
+	.art {
+        flex-direction: column;
+        align-items: center;
+    }
+    .art__wrapper {
+        height: 100vh;
+        width: 100%;
+    }
+        /*article 0*/
+        .art-0__logo-1 {
+            width: 16vw;
+            margin-bottom: 1.3vw;
+        }
+        .art-0__logo-2 {
+            width: 40vw;
+            margin: 35px 0 60px;
+        }
+        .art-0__logo-3 {
+            width: 50vw;
+        }
+        .art-0__text-1 {
+            font-size: 5vw;
+            line-height: 1.2em;
+        }
+        .art-0__text-2 {
+            font-size: 3vw;
+        }
+        .art-0__text-3 {
+            font-size: 4.6vw;
+            margin: 30px 0;
+        }
+        .art-0__link {
+            font-size: 3vw;
+        }
+        .art-0__phone{
+            font-size: 3.2vw;
+        }
+}
+/*576px < mobile landscape, tablet < 768px*/
+@media (min-width: 576px) and (max-width: 767.98px) {
+	
+}
+/*768px < mobile landscape, tablet < 1280px*/
+@media (min-width: 768px ) and (max-width: 1280px) {
+	
+}
