--- a/css/style.css
+++ b/css/style.css
@@ -2,9 +2,12 @@
         core
        styles
 \****************/
+html {
+    height: 100%;
+}
 body {
     font-family: "Pragmatica Light", sans-serif;
-    width: 100vw;
+    width: 100%;
     height: 100%;
     padding: 0;
     margin: 0;
