--- a/css/style.css
+++ b/css/style.css
@@ -69,8 +69,8 @@ header {
 main {
     width: 100%;
     height: auto;
-    background-color: #5cc5c4;
-    background-image: url(../images/bck_1.png);
+    background-color: white;
+    background-image: url(../images/bck_2.png);
     background-position: 50% 50%;
     background-repeat: repeat;
     background-size: contain;
@@ -83,6 +83,11 @@ article {
 }
     /*article 0*/
     .art-0 {
+        background-color: #5cc5c4;
+        background-image: url(../images/bck_1.png);
+        background-position: 50% 50%;
+        background-repeat: repeat;
+        background-size: cover;
     }
     .art__wrapper {
         width: 50vw;
@@ -154,6 +159,11 @@ article {
         flex-direction: column;
         justify-content: center;
         align-items: center;
+        background-color: #5cc5c4;
+        background-image: url(../images/bck_1.png);
+        background-position: 50% 50%;
+        background-repeat: repeat;
+        background-size: cover;
     }
     .art-1__img-2, .art-1__img-3 {
         width: 10vw;
@@ -178,6 +188,64 @@ article {
     }
     .art-1__desc__text-2 {
         font-size: calc(16px + (22 - 16) * ((100vw - 300px) / (1900 - 300)));
+    }
+
+    /*article 2*/  
+    .art-2__img-2 {
+        width: 100%;
+        height: 100%;
+        background-color: #e3e8e4;
+        background-image: url(../images/logo.svg), url(../images/img_2.png);
+        background-position: 98% 2%, 50% 50%;
+        background-repeat: no-repeat;
+        background-size: 200px auto, cover;
+    }
+    .art-2__main {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: start;
+        text-align: left;
+        background-color: #5cc5c4;
+        background-clip: content-box;
+        padding: 7vw;
+        position: relative;
+    }
+    .art-2__main::before {
+        content: '';
+        display: block;
+        width: 12vw;
+        height: 6.3vw;
+        position: absolute;
+        left: 9vw;
+        top: .3vw;
+        background-image: url(../images/logo.svg);
+        background-position: 50% 50%;
+        background-repeat: repeat;
+        background-size: cover;
+    }
+    .art-2__main > * {
+        padding: 10px 20px;
+    }
+    .art-2__text-1 {
+        font-size: calc(40px + (62 - 40) * ((100vw - 300px) / (1900 - 300)));
+    }
+    .art-2__text-2 {
+        font-size: calc(18px + (30 - 18) * ((100vw - 300px) / (1900 - 300)));
+        line-height: 23px;
+    }
+    .art-2__img-1 {
+        width: 12vw;
+        min-width: 170px;
+    }
+    .art-2__text-4 {
+        font-size: calc(18px + (18 - 18) * ((100vw - 300px) / (1900 - 300)));
+        padding: 5px 20px;
+        line-height: 18px;
+    }
+    .art-2__text-4-bold {
+        font-weight: bold;
     }
 
 /***** footer *****/
@@ -371,6 +439,23 @@ footer .button a{
         /*article 1*/
         .art-1__img-2, .art-1__img-3, .art-1__img-4 {
             width: 25vw;
+        }
+        
+        /*article 2*/ 
+        .art-2__main {
+            padding: 15vw;
+        }
+        .art-2__main::before {
+            width: 23vw;
+            height: 12vw;
+            left: 21vw;
+            top: 1.3vw;
+        }
+        .art-2__left {
+            order: 2;
+        } 
+        .art-2__img-1 {
+            width: 30vw;
         }
 }
 /*576px < mobile landscape, tablet < 768px*/
