--- a/css/style.css
+++ b/css/style.css
@@ -248,6 +248,64 @@ article {
         font-weight: bold;
     }
 
+    /*article 3*/  
+    .art-3__img-2 {
+        width: 100%;
+        height: 100%;
+        background-color: #e3e8e4;
+        background-image: url(../images/logo.svg), url(../images/img_2.png);
+        background-position: 98% 2%, 50% 50%;
+        background-repeat: no-repeat;
+        background-size: 200px auto, cover;
+    }
+    .art-3__main {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: start;
+        text-align: left;
+        background-color: #5cc5c4;
+        background-clip: content-box;
+        padding: 7vw;
+        position: relative;
+    }
+    .art-3__main::before {
+        content: '';
+        display: block;
+        width: 12vw;
+        height: 6.3vw;
+        position: absolute;
+        left: 9vw;
+        top: .3vw;
+        background-image: url(../images/logo.svg);
+        background-position: 50% 50%;
+        background-repeat: repeat;
+        background-size: cover;
+    }
+    .art-3__main > * {
+        padding: 10px 20px;
+    }
+    .art-3__text-1 {
+        font-size: calc(40px + (62 - 40) * ((100vw - 300px) / (1900 - 300)));
+    }
+    .art-3__text-2 {
+        font-size: calc(18px + (30 - 18) * ((100vw - 300px) / (1900 - 300)));
+        line-height: 23px;
+    }
+    .art-3__img-1 {
+        width: 12vw;
+        min-width: 170px;
+    }
+    .art-3__text-4 {
+        font-size: calc(18px + (18 - 18) * ((100vw - 300px) / (1900 - 300)));
+        padding: 5px 20px;
+        line-height: 18px;
+    }
+    .art-3__text-4-bold {
+        font-weight: bold;
+    }
+
 /***** footer *****/
 footer {
     height: auto;
@@ -393,6 +451,24 @@ footer .button a{
 /**************************************
             	MADIA
 ***************************************/
+/*mobile < 576px */
+@media (max-width: 576px ) {
+    /*article 2*/ 
+    .art-2__text-1 {
+        font-size: 20px;
+        padding: 5px 20px;
+    }
+    .art-2__text-2 {
+        font-size: 14px;
+        padding: 5px 20px;
+    }
+    .art-2__text-4 {
+        font-size: 14px;
+    }
+    .art-2__img-1 {
+        display: none;
+    }
+}
 /*mobile < 767.98px*/
 @media (max-width: 767.98px) {
     article {
@@ -447,7 +523,7 @@ footer .button a{
         }
         .art-2__main::before {
             width: 23vw;
-            height: 12vw;
+            height: 12.1vw;
             left: 21vw;
             top: 1.3vw;
         }
