--- a/css/style.css
+++ b/css/style.css
@@ -211,6 +211,7 @@ article {
         background-clip: content-box;
         padding: 7vw;
         position: relative;
+        overflow: hidden;
     }
     .art-2__main::before {
         content: '';
@@ -253,7 +254,7 @@ article {
         width: 100%;
         height: 100%;
         background-color: #e3e8e4;
-        background-image: url(../images/logo.svg), url(../images/img_2.png);
+        background-image: url(../images/logo_white.svg), url(../images/img_3.png);
         background-position: 98% 2%, 50% 50%;
         background-repeat: no-repeat;
         background-size: 200px auto, cover;
@@ -261,11 +262,9 @@ article {
     .art-3__main {
         width: 100%;
         height: 100%;
-        display: flex;
-        flex-direction: column;
-        justify-content: start;
+        display: block;
         text-align: left;
-        background-color: #5cc5c4;
+        background-color: #56595b;
         background-clip: content-box;
         padding: 7vw;
         position: relative;
@@ -285,15 +284,18 @@ article {
     }
     .art-3__main > * {
         padding: 10px 20px;
+        display: block;
     }
     .art-3__text-1 {
         font-size: calc(40px + (62 - 40) * ((100vw - 300px) / (1900 - 300)));
+        line-height: 43px;
     }
     .art-3__text-2 {
         font-size: calc(18px + (30 - 18) * ((100vw - 300px) / (1900 - 300)));
         line-height: 23px;
     }
     .art-3__img-1 {
+        float: right;
         width: 12vw;
         min-width: 170px;
     }
@@ -306,6 +308,70 @@ article {
         font-weight: bold;
     }
 
+    /*article 4*/  
+    .art-4__img-2 {
+        width: 100%;
+        height: 100%;
+        background-color: #e3e8e4;
+        background-image: url(../images/logo_white.svg), url(../images/img_4.png);
+        background-position: 98% 2%, 50% 50%;
+        background-repeat: no-repeat;
+        background-size: 200px auto, cover;
+    }
+    .art-4__main {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        text-align: left;
+        background-color: #8d6a4c;
+        background-clip: content-box;
+        background-image: url(../images/img_4-1.png);
+        background-position: 83% 60%;
+        background-repeat: no-repeat;
+        background-size: 22%;
+        padding: 7vw;
+        position: relative;
+    }
+    .art-4__main::before {
+        content: '';
+        display: block;
+        width: 12vw;
+        height: 6.3vw;
+        position: absolute;
+        left: 9vw;
+        top: .3vw;
+        background-image: url(../images/logo.svg);
+        background-position: 50% 50%;
+        background-repeat: repeat;
+        background-size: cover;
+    }
+    .art-4__main > * {
+        padding: 10px 20px;
+    }
+    .art-4__text-1 {
+        font-size: calc(40px + (62 - 40) * ((100vw - 300px) / (1900 - 300)));
+        line-height: 50px;
+    }
+    .art-4__text-2 {
+        font-size: calc(18px + (30 - 18) * ((100vw - 300px) / (1900 - 300)));
+        line-height: 23px;
+    }
+    .art-4__img-1 {
+        display: none;
+        float: right;
+        width: 12vw;
+        min-width: 170px;
+    }
+    .art-4__text-4 {
+        font-size: calc(18px + (18 - 18) * ((100vw - 300px) / (1900 - 300)));
+        line-height: 18px;
+    }
+    .art-4__text-4-bold {
+        font-weight: bold;
+    }
+
 /***** footer *****/
 footer {
     height: auto;
@@ -315,7 +381,7 @@ footer {
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
-    background-color: #44c6bf;
+    background-color: #5cc5c4;
 }
 footer h2 {
     color: #1f7c78;
@@ -468,6 +534,36 @@ footer .button a{
     .art-2__img-1 {
         display: none;
     }
+    /*article 3*/ 
+    .art-3__text-1 {
+        font-size: 20px;
+        padding: 5px 20px;
+    }
+    .art-3__text-2 {
+        font-size: 14px;
+        padding: 5px 20px;
+    }
+    .art-3__text-4 {
+        font-size: 14px;
+    }
+    .art-3__img-1 {
+        display: none;
+    }
+    /*article 4*/ 
+    .art-4__text-1 {
+        font-size: 20px;
+        padding: 5px 20px;
+    }
+    .art-4__text-2 {
+        font-size: 14px;
+        padding: 5px 20px;
+    }
+    .art-4__text-4 {
+        font-size: 14px;
+    }
+    .art-4__img-1 {
+        display: none !important;
+    }
 }
 /*mobile < 767.98px*/
 @media (max-width: 767.98px) {
@@ -532,6 +628,44 @@ footer .button a{
         } 
         .art-2__img-1 {
             width: 30vw;
+        }
+        /*article 3*/ 
+        .art-3__main {
+            padding: 15vw;
+        }
+        .art-3__main::before {
+            width: 23vw;
+            height: 12.1vw;
+            left: 21vw;
+            top: 1.3vw;
+        }
+        .art-3__left {
+            order: 2;
+        } 
+        .art-3__img-1 {
+            width: 30vw;
+        }
+        /*article 4*/ 
+        .art-4__main {
+            padding: 15vw;
+            display: block;
+            background-image: none;
+        }
+        .art-4__main > * {
+            display: block;
+        }
+        .art-4__main::before {
+            width: 23vw;
+            height: 12.1vw;
+            left: 21vw;
+            top: 1.3vw;
+        }
+        .art-4__left {
+            order: 2;
+        } 
+        .art-4__img-1 {
+            width: 30vw;
+            display: block;
         }
 }
 /*576px < mobile landscape, tablet < 768px*/
