--- a/css/fonts.css
+++ b/css/fonts.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: "Pragmatica Light";
-  src: url('../fonts/Pragmatica Light/pragmaticaLight.eot'); /* IE9 Compat Modes */
-  src: url("../fonts/Pragmatica Light/pragmaticaLight.otf") format("otf"),
-       url('../fonts/Pragmatica Light/pragmaticaLight.woff') format('woff'), /* Pretty Modern Browsers */
-       url('../fonts/Pragmatica Light/pragmaticaLight.ttf')  format('truetype'), /* Safari, Android, iOS */
-       url('../fonts/Pragmatica Light/pragmaticaLight.svg#') format('svg'); /* Legacy iOS */
+  src: url('../fonts/Pragmatica Light/PragmaticaLight.eot'); /* IE9 Compat Modes */
+  src: url("../fonts/Pragmatica Light/PragmaticaLight.otf") format("otf"),
+       url('../fonts/Pragmatica Light/PragmaticaLight.woff') format('woff'), /* Pretty Modern Browsers */
+       url('../fonts/Pragmatica Light/PragmaticaLight.ttf')  format('truetype'), /* Safari, Android, iOS */
+       url('../fonts/Pragmatica Light/PragmaticaLight.svg#') format('svg'); /* Legacy iOS */
   font-style: normal;
   font-weight: normal;
 }
